fix: add forgotten throws for methods that have exceptions